--- a/housing_price/main.ipynb
+++ b/housing_price/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "21d26a09",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "df = pd.read_csv(\"datasets/housing.csv\")"
    ]
   },
