--- a/housing_price/main.ipynb
+++ b/housing_price/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "21d26a09",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e1d2b2a5",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "[545 rows x 13 columns]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "15bce8e2",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "64916d9d",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d4e8c6a1",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "(545, 13)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "89ee1b5e",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "max      3.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d77ad6e6",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "01e4e59d",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "132b051f",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "c4a09ba8",
    "metadata": {},
    "outputs": [
@@ -8839,8 +8839,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "230a650c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: int64\n",
+      "area: int64\n",
+      "bedrooms: int64\n",
+      "bathrooms: int64\n",
+      "stories: int64\n",
+      "mainroad: object\n",
+      "guestroom: object\n",
+      "basement: object\n",
+      "hotwaterheating: object\n",
+      "airconditioning: object\n",
+      "parking: int64\n",
+      "prefarea: object\n",
+      "furnishingstatus: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cols in df.columns:\n",
+    "    print(f\"{cols}: {df[cols].dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b566ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.select_dtypes(include='object').columns:\n",
+    "    df[col] = df[col].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6c301a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming the yes/no columns are the categorical ones with 'yes' and 'no' values: mainroad, guestroom, basement, hotwaterheating, airconditioning, prefarea\n",
+    "yes_no_cols = ['mainroad', 'guestroom', 'basement', 'hotwaterheating', 'airconditioning', 'prefarea']\n",
+    "for col in yes_no_cols:\n",
+    "    df[col] = df[col].map({'yes': 1, 'no': 0}).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b391a04c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: int64\n",
+      "area: int64\n",
+      "bedrooms: int64\n",
+      "bathrooms: int64\n",
+      "stories: int64\n",
+      "mainroad: int64\n",
+      "guestroom: int64\n",
+      "basement: int64\n",
+      "hotwaterheating: int64\n",
+      "airconditioning: int64\n",
+      "parking: int64\n",
+      "prefarea: int64\n",
+      "furnishingstatus: category\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cols in df.columns:\n",
+    "    print(f\"{cols}: {df[cols].dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "745b878d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.get_dummies(df, columns=['furnishingstatus'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "45bcaffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: int64\n",
+      "area: int64\n",
+      "bedrooms: int64\n",
+      "bathrooms: int64\n",
+      "stories: int64\n",
+      "mainroad: int64\n",
+      "guestroom: int64\n",
+      "basement: int64\n",
+      "hotwaterheating: int64\n",
+      "airconditioning: int64\n",
+      "parking: int64\n",
+      "prefarea: int64\n",
+      "furnishingstatus_furnished: bool\n",
+      "furnishingstatus_semi-furnished: bool\n",
+      "furnishingstatus_unfurnished: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cols in df.columns:\n",
+    "    print(f\"{cols}: {df[cols].dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f987c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "577cec2b",
    "metadata": {},
    "outputs": [],
    "source": []
