--- a/housing_price/main.ipynb
+++ b/housing_price/main.ipynb
@@ -8839,7 +8839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "230a650c",
    "metadata": {},
    "outputs": [
@@ -8968,18 +8968,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f987c0a",
+   "execution_count": 26,
+   "id": "577cec2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "df[['furnishingstatus_furnished', 'furnishingstatus_semi-furnished', 'furnishingstatus_unfurnished']] = df[['furnishingstatus_furnished', 'furnishingstatus_semi-furnished', 'furnishingstatus_unfurnished']].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aed3189f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: int64\n",
+      "area: int64\n",
+      "bedrooms: int64\n",
+      "bathrooms: int64\n",
+      "stories: int64\n",
+      "mainroad: int64\n",
+      "guestroom: int64\n",
+      "basement: int64\n",
+      "hotwaterheating: int64\n",
+      "airconditioning: int64\n",
+      "parking: int64\n",
+      "prefarea: int64\n",
+      "furnishingstatus_furnished: int64\n",
+      "furnishingstatus_semi-furnished: int64\n",
+      "furnishingstatus_unfurnished: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cols in df.columns:\n",
+    "    print(f\"{cols}: {df[cols].dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "49617a22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>area</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>stories</th>\n",
+       "      <th>mainroad</th>\n",
+       "      <th>guestroom</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>hotwaterheating</th>\n",
+       "      <th>airconditioning</th>\n",
+       "      <th>parking</th>\n",
+       "      <th>prefarea</th>\n",
+       "      <th>furnishingstatus_furnished</th>\n",
+       "      <th>furnishingstatus_semi-furnished</th>\n",
+       "      <th>furnishingstatus_unfurnished</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13300000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>8960</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>9960</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12215000</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11410000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>1820000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>1767150</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>3620</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>2910</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>3850</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>545 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        price  area  bedrooms  bathrooms  stories  mainroad  guestroom  \\\n",
+       "0    13300000  7420         4          2        3         1          0   \n",
+       "1    12250000  8960         4          4        4         1          0   \n",
+       "2    12250000  9960         3          2        2         1          0   \n",
+       "3    12215000  7500         4          2        2         1          0   \n",
+       "4    11410000  7420         4          1        2         1          1   \n",
+       "..        ...   ...       ...        ...      ...       ...        ...   \n",
+       "540   1820000  3000         2          1        1         1          0   \n",
+       "541   1767150  2400         3          1        1         0          0   \n",
+       "542   1750000  3620         2          1        1         1          0   \n",
+       "543   1750000  2910         3          1        1         0          0   \n",
+       "544   1750000  3850         3          1        2         1          0   \n",
+       "\n",
+       "     basement  hotwaterheating  airconditioning  parking  prefarea  \\\n",
+       "0           0                0                1        2         1   \n",
+       "1           0                0                1        3         0   \n",
+       "2           1                0                0        2         1   \n",
+       "3           1                0                1        3         1   \n",
+       "4           1                0                1        2         0   \n",
+       "..        ...              ...              ...      ...       ...   \n",
+       "540         1                0                0        2         0   \n",
+       "541         0                0                0        0         0   \n",
+       "542         0                0                0        0         0   \n",
+       "543         0                0                0        0         0   \n",
+       "544         0                0                0        0         0   \n",
+       "\n",
+       "     furnishingstatus_furnished  furnishingstatus_semi-furnished  \\\n",
+       "0                             1                                0   \n",
+       "1                             1                                0   \n",
+       "2                             0                                1   \n",
+       "3                             1                                0   \n",
+       "4                             1                                0   \n",
+       "..                          ...                              ...   \n",
+       "540                           0                                0   \n",
+       "541                           0                                1   \n",
+       "542                           0                                0   \n",
+       "543                           1                                0   \n",
+       "544                           0                                0   \n",
+       "\n",
+       "     furnishingstatus_unfurnished  \n",
+       "0                               0  \n",
+       "1                               0  \n",
+       "2                               0  \n",
+       "3                               0  \n",
+       "4                               0  \n",
+       "..                            ...  \n",
+       "540                             1  \n",
+       "541                             0  \n",
+       "542                             1  \n",
+       "543                             0  \n",
+       "544                             1  \n",
+       "\n",
+       "[545 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "577cec2b",
+   "id": "4576a9d8",
    "metadata": {},
    "outputs": [],
    "source": []
