start model training

--- a/housing_price/main.ipynb
+++ b/housing_price/main.ipynb
@@ -8979,35 +8979,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "aed3189f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "price: int64\n",
-      "area: int64\n",
-      "bedrooms: int64\n",
-      "bathrooms: int64\n",
-      "stories: int64\n",
-      "mainroad: int64\n",
-      "guestroom: int64\n",
-      "basement: int64\n",
-      "hotwaterheating: int64\n",
-      "airconditioning: int64\n",
-      "parking: int64\n",
-      "prefarea: int64\n",
-      "furnishingstatus_furnished: int64\n",
-      "furnishingstatus_semi-furnished: int64\n",
-      "furnishingstatus_unfurnished: int64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "price                              int64\n",
+       "area                               int64\n",
+       "bedrooms                           int64\n",
+       "bathrooms                          int64\n",
+       "stories                            int64\n",
+       "mainroad                           int64\n",
+       "guestroom                          int64\n",
+       "basement                           int64\n",
+       "hotwaterheating                    int64\n",
+       "airconditioning                    int64\n",
+       "parking                            int64\n",
+       "prefarea                           int64\n",
+       "furnishingstatus_furnished         int64\n",
+       "furnishingstatus_semi-furnished    int64\n",
+       "furnishingstatus_unfurnished       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for cols in df.columns:\n",
-    "    print(f\"{cols}: {df[cols].dtype}\")"
+    "df.dtypes"
    ]
   },
   {
@@ -9325,8 +9328,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4576a9d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price                              0\n",
+       "area                               0\n",
+       "bedrooms                           0\n",
+       "bathrooms                          0\n",
+       "stories                            0\n",
+       "mainroad                           0\n",
+       "guestroom                          0\n",
+       "basement                           0\n",
+       "hotwaterheating                    0\n",
+       "airconditioning                    0\n",
+       "parking                            0\n",
+       "prefarea                           0\n",
+       "furnishingstatus_furnished         0\n",
+       "furnishingstatus_semi-furnished    0\n",
+       "furnishingstatus_unfurnished       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "45591830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "448e3fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "df_train, df_test = train_test_split(df, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42d14ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "numerical_cols = df.select_dtypes(include='number').columns.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "998edfee",
    "metadata": {},
    "outputs": [],
    "source": []
