--- a/housing_price/main.ipynb
+++ b/housing_price/main.ipynb
@@ -8839,7 +8839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "230a650c",
    "metadata": {},
    "outputs": [
@@ -8870,7 +8870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "40b566ee",
    "metadata": {},
    "outputs": [],
@@ -8881,7 +8881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "6c301a02",
    "metadata": {},
    "outputs": [],
@@ -8894,7 +8894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "b391a04c",
    "metadata": {},
    "outputs": [
@@ -8925,7 +8925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "745b878d",
    "metadata": {},
    "outputs": [],
@@ -8935,7 +8935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "45bcaffc",
    "metadata": {},
    "outputs": [
@@ -8968,7 +8968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "577cec2b",
    "metadata": {},
    "outputs": [],
@@ -8979,7 +8979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "aed3189f",
    "metadata": {},
    "outputs": [
@@ -9004,7 +9004,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9015,7 +9015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "49617a22",
    "metadata": {},
    "outputs": [
@@ -9317,7 +9317,7 @@
        "[545 rows x 15 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9328,7 +9328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "4576a9d8",
    "metadata": {},
    "outputs": [
@@ -9353,7 +9353,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9364,7 +9364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "45591830",
    "metadata": {},
    "outputs": [],
@@ -9375,7 +9375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "448e3fe7",
    "metadata": {},
    "outputs": [],
@@ -9386,23 +9386,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "42d14ea9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "scaler = MinMaxScaler()\n",
-    "numerical_cols = df.select_dtypes(include='number').columns.tolist()\n"
+    "numerical_cols = df.select_dtypes(include='number').columns.tolist()\n",
+    "scaler.fit(df_train[numerical_cols])\n",
+    "df_train[numerical_cols] = scaler.transform(df_train[numerical_cols])\n",
+    "df_test[numerical_cols] = scaler.transform(df_test[numerical_cols])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "998edfee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "681d43d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.01591218764018746\n",
+      "R-squared: 0.6529242642153178\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "features = [col for col in numerical_cols if col != 'price']\n",
+    "X_train = df_train[features]\n",
+    "y_train = df_train['price']\n",
+    "X_test = df_test[features]\n",
+    "y_test = df_test['price']\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "print(f\"R-squared: {r2}\")"
+   ]
   }
  ],
  "metadata": {
